# VacationCalendar

./: .gitignore  CMakeLists.txt  README.md  vacation.dump  vacation_queries.txt
VacationCalendar/: VacationCalendar.pro  employee.cpp  employee.h  employeerepository.cpp  employeerepository.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdbconfig.cpp  qdbhelper.cpp  qdbhelper.h  qganttdiagarmm.cpp  qganttdiagarmm.h  qganttdiagramm.cpp  qganttdiagramm.h  testdatamodel.h  testrepository.cpp  testrepository.h  vacation.cpp  vacation.h  vacationnorm.cpp  vacationnorm.h  vacationnormrepository.cpp  vacationnormrepository.h  vacationrepository.cpp  vacationrepository.h
include/: vacation_protocols.pb.h
lib/: vacation_protocols.grpc.pb.cc  vacation_protocols.grpc.pb.h  vacation_protocols.pb.cc
proto/: vacation_protocols.proto
server/: employee.cpp  employee.h  employeerepository.h  vacation.cpp  vacationrepository.cpp  vacationrepository.h
src/: CMakeLists.txt
src/client/: VacationCalendar.pro  employee.h  qdbconfig.h  qganttdiagramm.cpp  qganttdiagramm.h  testdatamodel.cpp  testrepository.h  vacation.h  vacationnormrepository.cpp  vacationrepository.cpp
src/server/: CMakeLists.txt  employeerepository.cpp  iemployeerepository.h  ivacationrepository.h  vacation.h
